# trelyan-falcon-inscription

./: .gitignore  .gitleaks.toml  AUDIT_READINESS.md  CONTRIBUTING.md  Dockerfile.repro  Dockerfile.verify  LICENSE  LOCALNET_VALIDATION_2026-06-01.md  Makefile  PINNED_BUILD.md  PUBLIC_CLAIMS_HARDENING_2026-06-01.md  README.md  RELEASES.md  REVIEWER.md  ROADMAP.md  SECURITY.md  THREAT_MODEL_AND_TRACEABILITY.md  TRELYAN_PROTOCOL_SPEC_v0.2.md
.github/workflows/: ci.yml  release.yml
contracts/: A1_RESOLUTION_2026-06-01.md  COMPILE_REVIEW_2026-06-01.md  FALCON_BUDGET_2026-06-01.md  FALCON_ENCODING_2026-06-01.md  RED_TEAM_REVIEW_2026-06-01.md  deploy_testnet.py  falcon_det1024.py  inscription.py  requirements.txt  test_inscription.py  trelyan_client.py
scripts/: verify_all.sh
sdk/: CHANGELOG.md  README.md  pyproject.toml
sdk/ci/: verify_pinned_digest.py
sdk/docs/: DEMO.md  INTEROP_algo-pqc-kit.md
sdk/docs/tutorials/: 01-quickstart.md  02-deterministic-falcon-0xBA.md  03-arg-cap-box-commit.md  04-end-to-end-inscribe-verify.md
sdk/examples/: interop_algo_pqc_kit.py  quickstart.py  verify_trelyan.py
sdk/src/trelyan_pq/: __init__.py  _seal_worker.py  falcon.py  inscription.py  message.py  seal.py
sdk/tests/: test_interop_algo_pqc_kit_kat.py  test_isolated_signer.py  test_message.py  test_seal.py  test_signature_fuzz.py  test_signature_kat.py  test_vectors.py
sdk/tests/fuzz/: README.md  fuzz_encoding_atheris.py  fuzz_falcon_verify.cc
sdk/tests/vectors/: det1024_kat.json  gen_det1024_kat.py
